--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="js">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JavaScript</title>
+  <title>Git learn</title>
   <script defer src="index.js"></script>
 
 
 </head>
 <body>
-  <h1>Hello js</h1>
+  <h1>Изучаю Git lvl1</h1>
 </body>
 </html>
