--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Git learn</title>
   <script defer src="index.js"></script>
+  <script defer src="einstein.js"></script>
 
 
 </head>
