--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Git learn</title>
   <script defer src="index.js"></script>
   <script defer src="einstein.js"></script>
+  <script defer src="tasks.js"></script>
 
 
 </head>
