--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script defer src="tasks01.js"></script>
   <script defer src="tasks02.js"></script> 
   <script defer src="tasks03.js"></script>
-
+  <script defer src="tasks04.js"></script>
 
 </head>
 <body>
