--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script defer src="tasks02.js"></script> 
   <script defer src="tasks03.js"></script>
   <script defer src="tasks04.js"></script>
+  <script defer src="tasks05.js"></script>
 
 </head>
 <body>
