--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Git learn</title>
-  <script defer src="tasks01.js"></script>
-  <script defer src="tasks02.js"></script>
-  <script defer src="tasks03.js"></script>
-  <script defer src="tasks04.js"></script>
-</head>
+  <script defer src="game.js"></script>
+  <script defer src="script.js"></script>
+
 <body>
   <h1>Изучаю Git lvl1</h1>
 </body>
