--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Git learn</title>
   <script defer src="game.js"></script>
-  <script defer src="script.js"></script>
 
 <body>
   <h1>Изучаю Git lvl1</h1>
 </body>
+</head>
 </html>
